--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,19 +1,26 @@
 @mixin main {
-	* {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		font-family: $main_font;
-		color: $main_text_color;
-	}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: $main_font;
+        color: $main_text_color;
+    }
 }
 
 @mixin clearfix {
-	&:before, &:after {
-	    content: "";
-	    display: table;
-	}
-	&:after {
-	    clear: both;
-	}
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
+@mixin section {
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 5em;
 }
