--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'mixins';
 @include main;
+
 .container {
     width: 850px;
     margin: 0 auto;
@@ -42,8 +43,7 @@ body {
                         font-size: 0.8em;
                         
                         &:hover {
-                            background-color: black;
-                            color: white;
+                            
                              
                             text-decoration: underline;
                         }
@@ -70,6 +70,78 @@ body {
                 margin-top: 10px;
                 color: white;
                 
+            }
+        }
+    }
+    .catalog {
+        width: 100%;
+        height: 400px;
+        background-color: $grey_background;
+        .content {
+            h3 {
+                margin-bottom: 30px;
+            }
+           @include section;
+            figure {
+                width: 25%;
+                height: 140px;
+                float: left;
+                .offer {
+                    padding: 2px 24px 2px 24px;
+                    background-color: $red_dark;
+                    color: white;
+                    text-decoration: none;
+                    &:hover {
+                        padding: 2px 30px 2px 30px;
+                    }
+                    
+                }
+                img {
+                    width: 80%;
+                    height: 80%;
+                }
+            }
+        }
+    }
+    .pricing {
+        width: 100%;
+        height: 400px;
+        background-color: white;
+        
+        .content {
+            @include section;
+            h3 {
+                margin-bottom: 50px;
+            }
+            table {
+                
+                border-collapse: collapse;
+                margin: 0 auto;
+                thead {
+                    th {
+                        width: 140px;
+                        height: 40px;
+                        color: white;
+                        background-color: $main_red;
+                        font-size: 12px;
+                        
+                    }
+                }
+                tbody{
+                    td{
+                        border-bottom: 1px solid grey;
+                        height:40px;
+                        width: 140px;
+                         font-size: 12px;
+                        
+                        &:first-child{
+                            background-color: $grey_background;
+                            font-weight: bold;
+                            
+                            
+                        }
+                    }
+                }
             }
         }
     }
