--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,6 @@
 @import 'vars';
 @import 'mixins';
 @include main;
-
 .container {
     width: 850px;
     margin: 0 auto;
@@ -41,15 +40,10 @@ body {
                         text-decoration: none;
                         text-transform: uppercase;
                         font-size: 0.8em;
-                        
                         &:hover {
-                            
-                             
                             text-decoration: underline;
                         }
                     }
-                    
-                    
                 }
             }
         }
@@ -59,17 +53,13 @@ body {
             height: 50px;
             border-bottom: 1px solid $red_dark;
             margin-top: 200px;
-          
-            
             h1 {
-            color: white;
-            font-weight: normal;  
-            
+                color: white;
+                font-weight: normal;
             }
             p {
                 margin-top: 10px;
                 color: white;
-                
             }
         }
     }
@@ -81,7 +71,7 @@ body {
             h3 {
                 margin-bottom: 30px;
             }
-           @include section;
+            @include section;
             figure {
                 width: 25%;
                 height: 140px;
@@ -94,7 +84,6 @@ body {
                     &:hover {
                         padding: 2px 30px 2px 30px;
                     }
-                    
                 }
                 img {
                     width: 80%;
@@ -107,14 +96,12 @@ body {
         width: 100%;
         height: 400px;
         background-color: white;
-        
         .content {
             @include section;
             h3 {
                 margin-bottom: 50px;
             }
             table {
-                
                 border-collapse: collapse;
                 margin: 0 auto;
                 thead {
@@ -124,25 +111,45 @@ body {
                         color: white;
                         background-color: $main_red;
                         font-size: 12px;
-                        
                     }
                 }
-                tbody{
-                    td{
+                tbody {
+                    td {
                         border-bottom: 1px solid grey;
-                        height:40px;
+                        height: 40px;
                         width: 140px;
-                         font-size: 12px;
-                        
-                        &:first-child{
+                        font-size: 12px;
+                        &:first-child {
                             background-color: $grey_background;
                             font-weight: bold;
-                            
-                            
                         }
                     }
                 }
             }
+        }
+    }
+    footer {
+        width: 100%;
+        height: 400px;
+        background-color: black;
+        .footer-logo {
+            padding-top: 15px;
+            width: 100%;
+            border-bottom: 1px solid $main_red;
+            span {
+                color: $main_red;
+            }
+            
+        }
+        address{
+            color: white;
+            padding: 20px 0 0 20px;
+            font-size: 14px;
+            float: left;
+        }
+        iframe{
+            float: right;
+           padding: 20px 20px 0 0;
         }
     }
 }
