--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,11 +14,12 @@ body {
         width: 100%;
         height: 700px;
         padding: 1px;
-        padding-top: 2em;
         nav {
             background-color: white;
             width: 100%;
             height: 40px;
+            width: 80%;
+            margin: 0 auto;
             .logo {
                 float: left;
                 padding: 8px 0 0 10px;
@@ -48,6 +49,7 @@ body {
             }
         }
         .headline {
+            margin: 0 auto;
             text-align: center;
             width: 450px;
             height: 50px;
@@ -68,6 +70,8 @@ body {
         height: 400px;
         background-color: $grey_background;
         .content {
+            width: 80%;
+            margin: 0 auto;
             h3 {
                 margin-bottom: 30px;
             }
@@ -97,7 +101,12 @@ body {
         height: 400px;
         background-color: white;
         .content {
+            width: 80%;
+            margin: 0 auto;
             @include section;
+            .hidden {
+                visibility: hidden;
+            }
             h3 {
                 margin-bottom: 50px;
             }
@@ -132,24 +141,112 @@ body {
         width: 100%;
         height: 400px;
         background-color: black;
-        .footer-logo {
+        div{
+            width: 80%;
+            margin: 0 auto;
+             .footer-logo {
             padding-top: 15px;
             width: 100%;
             border-bottom: 1px solid $main_red;
             span {
                 color: $main_red;
             }
-            
         }
-        address{
+        address {
             color: white;
             padding: 20px 0 0 20px;
             font-size: 14px;
             float: left;
         }
-        iframe{
+        iframe {
             float: right;
-           padding: 20px 20px 0 0;
+            padding: 20px 20px 0 0;
         }
+        }
+       
+    }
+    @include tablet {
+        header{
+            nav{
+                width: 90%;
+            } 
+        }
+        .catalog {
+            .content {
+                figure {
+                    width: 50%;
+                    img {
+                        width: 30%;
+                        height: 50%;
+                    }
+                }
+            }
+        }
+        
+     
+        
+    }
+    @include mobile {
+        header {
+            background-image: none;
+            background-color: black;
+            .headline{
+                margin-top: 100px;
+            }
+            nav {
+                 width: 100%;
+                height: 400px;
+                
+                ul {
+                    text-align: center;
+                    float: none;
+                    width: 100%;
+                    
+                    li {
+                        display:block;
+                        width: 100%;
+                    }
+                }
+            }
+        }
+      .catalog {
+           height: 800px;
+            .content {
+               
+                figure {
+                    width: 100%;
+                }
+          }
+        }
+        .pricing {
+            .content{
+                .hidden{
+                    visibility: visible;
+                    a{
+                        padding: 12px 24px 12px 24px;
+                        background-color: red;
+                        color: white;
+                        text-transform: uppercase;
+                        text-decoration: none;
+                    }
+                }
+                table {
+                    display: none;
+                }
+            }
+        }
+        footer { 
+            div{
+             text-align: center;
+            address {
+                float: none;
+            }
+            iframe {
+                float: none;
+            }
+            }
+           
+        }
+      
     }
 }
